fix: Set `overflow-wrap` to `anywhere`.

--- a/sass/css/components/_project-card.scss
+++ b/sass/css/components/_project-card.scss
@@ -2,4 +2,9 @@
   img {
     object-fit: contain;
   }
+
+  &__info-wrap {
+    overflow: hidden;
+    overflow-wrap: anywhere;
+  }
 }
